--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,18 +1,20 @@
 @include('components/_head.html')
 
-  @include('components/_header.html')
+@include('components/_header.html')
 
-  <main class="main">
-    <h1 class="sr-only">
-      
-    </h1>
+<main class="main">
+  @include('components/_privelege.html')
 
+</main>
+@include('components/_footer.html')
 
-  </main>
+@include('components/_free-inspection.html')
 
-  @include('components/_footer.html')
+@include('components/_stock.html')
 
-  <script src="js/main.min.js"></script>
+@include('components/_services.html')
+
+<script src="js/main.min.js"></script>
 </body>
 
 </html>
