--- a/app/html/index.html
+++ b/app/html/index.html
@@ -6,13 +6,28 @@
   @include('components/_privelege.html')
 
 </main>
-@include('components/_footer.html')
 
-@include('components/_free-inspection.html')
+<!-- @include('components/_free-inspection.html')-->
 
 @include('components/_stock.html')
 
-@include('components/_services.html')
+ @include('components/_services.html')
+
+@include('components/_doctors.html')
+
+@include('components/_assistant.html')
+
+@include('components/_reviews.html')
+
+@include('components/_documentation.html')
+
+@include('components/_about.html')
+
+@include('components/_registration.html')
+
+@include('components/_contacts.html')
+
+<!-- @include('components/_footer.html') -->
 
 <script src="js/main.min.js"></script>
 </body>
