--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,41 +1,29 @@
-@include('components/_head.html')
+<!DOCTYPE html>
+<html lang="ru">
+  @include('components/_head.html')
 
-<div class="wrapper">
+  <body>
+    <div class="wrapper">
+      @include('components/_header.html')
 
-  @include('components/_header.html')
+      <main class="main">
+        @include('components/_privelege.html')
+        @include('components/_free-inspection.html')
+        @include('components/_stock.html') @include('components/_services.html')
+        @include('components/_doctors.html')
+        @include('components/_assistant.html')
+        @include('components/_reviews.html')
+        @include('components/_documentation.html')
+        @include('components/_about.html')
+        @include('components/_registration.html')
+        @include('components/_contacts.html')
+      </main>
 
-  <main class="main">
-    @include('components/_privelege.html')
+      @include('components/_footer.html')
+    </div>
 
-    @include('components/_free-inspection.html')
+    @include('components/_popup.html')
 
-    @include('components/_stock.html')
-
-    @include('components/_services.html')
-
-    @include('components/_doctors.html')
-
-    @include('components/_assistant.html')
-
-    @include('components/_reviews.html')
-
-    @include('components/_documentation.html')
-
-    @include('components/_about.html')
-
-    @include('components/_registration.html')
-
-    @include('components/_contacts.html')
-
-  </main>
-
-  @include('components/_footer.html')
-
-</div>
-
-@include('components/_popup.html')
-
-<script src="js/main.min.js"></script>
-</body>
-
+    <script src="js/main.min.js"></script>
+  </body>
 </html>
