--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon/favicon.ico">
+  <link
+    rel="apple-touch-icon"
+    sizes="76x76"
+    href="favicons/apple-touch-icon.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="favicons/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="favicons/favicon-16x16.png"
+  />
+  <link rel="manifest" href="favicons/site.webmanifest" />
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
   <title>Стоматологическая клиника "Семейный доктор"</title>
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
-<body>
 
-<div class="wrapper">
-
-  <header id="header" class="header">
+  <body>
+    <div class="wrapper">
+      <header id="header" class="header">
   <div class="container">
     <div class="header__top header-top">
       <div class="header-top__info">
@@ -171,8 +193,8 @@
   </div>
 </header>
 
-  <main class="main">
-    <section class="privelege">
+      <main class="main">
+        <section class="privelege">
   <h2 class="sr-only">
     Привелегии
   </h2>
@@ -211,8 +233,7 @@
     </ul>
   </div>
 </section>
-
-    <section class="free-inspection section">
+        <section class="free-inspection section">
   <div class="container">
     <h2 class="free-inspection__title title">
       Бесплатная консультация врача
@@ -271,8 +292,7 @@
     </a>
   </div>
 </section>
-
-    <section id="stock" class="stock section">
+        <section id="stock" class="stock section">
   <div class="container">
     <h2 class="stock__title title">
       Акции
@@ -331,9 +351,7 @@
       </ul>
     </div>
   </div>
-</section>
-
-    <section id="services" class="services section">
+</section> <section id="services" class="services section">
   <div class="container">
     <h2 class="services__title title">
       Услуги
@@ -346,7 +364,7 @@
 
     <ul class="services__banners banners">
       <li class="banners__item">
-        <img class="banners__img" src="images/services/services-1.png" alt="Изображение удаления зуба">
+        <img class="banners__img" src="./images/services/services-1.png" alt="Изображение удаления зуба">
 
         <div class="banners__top">
           <h3 class="banners__title">
@@ -369,13 +387,13 @@
             <ul class="banners__social social">
               <li class="social__item">
                 <a class="social__link" href="#">
-                  <img class="social__img" src="images/social/telegram.svg" alt="сылка на телеграм">
+                  <img class="social__img" src="./images/social/telegram.svg" alt="сылка на телеграм">
                 </a>
               </li>
 
               <li class="social__item">
                 <a class="social__link" href="#">
-                  <img class="social__img" src="images/social/whatsapp.svg" alt="сылка на ватсап">
+                  <img class="social__img" src="./images/social/whatsapp.svg" alt="сылка на ватсап">
                 </a>
               </li>
             </ul>
@@ -824,8 +842,7 @@
     </div>
   </div>
 </section>
-
-    <section id="doctors" class="doctors section">
+        <section id="doctors" class="doctors section">
   <div class="container">
     <h2 class="doctors__title title">
       Врачи
@@ -1173,8 +1190,7 @@
     </div>
   </div>
 </section>
-
-    <section id="assistant" class="assistant section">
+        <section id="assistant" class="assistant section">
   <div class="container">
 
     <h3 class="assistant__subtitle subtitle">
@@ -1263,8 +1279,7 @@
     </ul>
   </div>
 </section>
-
-    <section id="reviews" class="reviews section">
+        <section id="reviews" class="reviews section">
   <div class="container">
     <h2 class="reviews__title title">
       Отзывы
@@ -1400,8 +1415,7 @@
     </div>
   </div>
 </section>
-
-    <section id="documentation" class="documentation section">
+        <section id="documentation" class="documentation section">
   <div class="container">
     <h2 class="documentation__title title">
       Лицензии и награды
@@ -1448,8 +1462,7 @@
     </div>
   </div>
 </section>
-
-    <section id="about" class="about section">
+        <section id="about" class="about section">
   <div class="container">
     <h2 class="about__title title">
       О клинике
@@ -1536,8 +1549,7 @@
     </div>
   </div>
 </section>
-
-    <section id="registration" class="registration section">
+        <section id="registration" class="registration section">
   <div class="registration__wrapper" style="background-image: url('images/bg/registration-bg.jpg')">
     <div class="container">
       <div class="registration__content record">
@@ -1564,8 +1576,7 @@
     </div>
   </div>
 </section>
-
-    <section id="contacts" class="contacts section">
+        <section id="contacts" class="contacts section">
 
   <div class="map">
     <iframe
@@ -1653,10 +1664,9 @@
     </div>
   </div>
 </section>
+      </main>
 
-  </main>
-
-  <footer class="footer">
+      <footer class="footer">
   <div class="footer__container container">
     <div class="footer__logo-box logo-box" href="#">
       <a class="logo-box__logo" href="#header">
@@ -1728,10 +1738,9 @@
     </nav>
   </div>
 </footer>
+    </div>
 
-</div>
-
-<div id="popup" class="popup">
+    <div id="popup" class="popup">
   <div class="popup__body">
     <div class="popup__content">
       <a class="popup__close close-popup close-button" href="#">
@@ -1829,7 +1838,6 @@
   </div>
 </div>
 
-<script src="js/main.min.js"></script>
-</body>
-
+    <script src="js/main.min.js"></script>
+  </body>
 </html>
